# CryptoAPI

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  development.sqlite-shm  development.sqlite-wal  expanded.rs  fly.toml
.github/workflows/: deploy_fly.yml  rust.yml
migrations/2023-01-20-180021_base/: up.sql
migrations/2023-01-20-205032_algorithm/: down.sql  up.sql
migrations/2023-01-20-205049_category/: up.sql
migrations/2023-01-21-193115_model_algorithm/: down.sql  up.sql
migrations/2023-01-22-190746_hash_item/: down.sql  up.sql
migrations/2023-01-27-181025_sha_alg/: down.sql  up.sql
src/: main.rs  schema.rs
src/api/: category_item.rs  category_manager.rs  mod.rs
src/models/: account.rs  algorithm.rs  categoria.rs  crypto.rs  diesel_db.rs  diesel_sqlite.rs  hash.rs  mod.rs  salting.rs  user.rs  util.rs
src/models/crypto/: enumerator.rs  mod.rs  plain.rs  sha1.rs  sha2.rs
src/pages/: index.rs  mod.rs
src/security/: auth_key.rs  mod.rs
