[package]
name = "cripto_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_okapi = "0.5.1"
rocket_prometheus = "0.10.0-rc.3"
rocket-validation = "0.1.0"
rand = "0.8.5"


[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.diesel]
version = "1.4.8"
features = ["sqlite", "r2d2"]

[dependencies.diesel_migrations]
version = "1.4.0"
features = ["sqlite"]

[dependencies.serde]
version = "1.0.152"
features = ["derive", "serde_derive"]


[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool", "sqlite_pool"]


