[package]
name = "crypto_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_prometheus = "0.10.0-rc.3"
rocket-validation = "0.1.0"
rand = "0.8.5"
schemars = "0.8.11"
indexmap = "1.8.2"
sha1 = "*"
sha2 = "*"

[dependencies.rocket_okapi]
version = "0.8.0-rc.2"
features = ["swagger", "rapidoc"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.diesel]
version = "1.4.8"
features = ["r2d2", "postgres"]

[dependencies.diesel_migrations]
version = "1.4.0"
features = ["postgres"]

[dependencies.serde]
version = "1.0.152"
features = ["derive", "serde_derive"]


[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_postgres_pool"]
